--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     429332414663336961       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "3-Bit-Password-Circuit"      # Project title
+  author:       "Jacob Brewer"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "A 3 bit Password Circuit that uses the 8 Switch Component to accept a password and set the password"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -16,19 +16,19 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "A-INPUT"
+  ui[1]: "B-INPUT"
+  ui[2]: "C-INPUT"
   ui[3]: ""
   ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[5]: "A-SET"
+  ui[6]: "B-SET"
+  ui[7]: "C-SET"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
+  uo[0]: "A-OUT"
+  uo[1]: "B-OUT"
+  uo[2]: "C-OUT"
   uo[3]: ""
   uo[4]: ""
   uo[5]: ""
